; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_utils.c_is_ipaddr_valid.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_utils.c_is_ipaddr_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_INET = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@AF_INET6 = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_ipaddr_valid(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [4 x i8], align 1
  store i8* %0, i8** %3, align 8
  %5 = load i32, i32* @AF_INET, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds [4 x i8], [4 x i8]* %4, i64 0, i64 0
  %8 = call i32 @evutil_inet_pton(i32 %5, i8* %6, i8* %7)
  %9 = icmp eq i32 %8, 1
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @TRUE, align 4
  store i32 %11, i32* %2, align 4
  br label %22

12:                                               ; preds = %1
  %13 = load i32, i32* @AF_INET6, align 4
  %14 = load i8*, i8** %3, align 8
  %15 = getelementptr inbounds [4 x i8], [4 x i8]* %4, i64 0, i64 0
  %16 = call i32 @evutil_inet_pton(i32 %13, i8* %14, i8* %15)
  %17 = icmp eq i32 %16, 1
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* %2, align 4
  br label %22

20:                                               ; preds = %12
  %21 = load i32, i32* @FALSE, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %18, %10
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @evutil_inet_pton(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
